# LSPP

./: .gitignore  .gitmodules  CMakeLists.txt  LSPPConfig.cmake  README.md
.github/workflows/: ci.yml
examples/: README.md  simple_hover_server.cpp
include/: Message.hpp  ProtocolStructures.hpp  Server.hpp  textDocument.hpp
src/: Message.cpp  ProtocolStructures.cpp  Server.cpp  main.cpp  textDocument.cpp
test/: TestClient.hpp  initExample.txt  test_json.cpp  test_message.cpp  test_server.cpp  test_textDocument.cpp
